--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -13,7 +13,7 @@
 
   background-color: $color-primary-dark;
 
-  &>i {
+  & > i {
     font-size: 3rem;
     padding: 3px 7px;
   }
@@ -21,11 +21,10 @@
   @media (max-width: 768px) {
     width: 97%;
 
-    &>i {
+    & > i {
       font-size: 2.4rem;
       padding: 3px 5px;
     }
-
   }
 }
 
@@ -58,6 +57,11 @@
     text-shadow: 0 0 3px #777;
     margin: 0 0 1rem;
     font-family: sans-serif;
+
+    @media (max-width: 768px) {
+      text-align: center;
+      font-size: 3rem;
+    }
   }
 
   &--text-2 {
@@ -65,6 +69,11 @@
     text-transform: uppercase;
     text-shadow: 0 0 3px #777;
     color: #fff;
+
+    @media (max-width: 768px) {
+      text-align: center;
+      font-size: 2rem;
+    }
   }
 
   &--btn-container {
