--- a/sass/_header-content.scss
+++ b/sass/_header-content.scss
@@ -7,12 +7,14 @@
     font-size: 1.6rem;
     line-height: 1.5;
 
-    @media (max-width:1200px) {
+    @media (max-width: 1200px) {
       font-size: 1.6rem;
     }
   }
 
-  &--container {}
+  &--container {
+    float: right;
+  }
 
   &--image {
     width: 250px;
