--- a/sass/_header-items.scss
+++ b/sass/_header-items.scss
@@ -4,6 +4,11 @@
   display: flex;
   margin-top: 2rem;
   justify-content: space-between;
+
+  @media (max-width: 768px) {
+    margin-top: -6rem;
+    margin-right: 0;
+  }
 }
 
 .item-1 {
@@ -13,10 +18,9 @@
   background-size: cover;
   margin-right: 15px;
 
-  // @media (min-width: 501px) {
-  //   margin: 0 0;
-  //   max-height: 250px;
-  // }
+  @media (max-width: 768px) {
+    margin-right: 0;
+  }
 
   &--icon {
     margin-left: 2rem;
@@ -39,7 +43,6 @@
     //   font-size: 3.4rem;
     //   margin-top: -2%;
     // }
-
   }
 }
 
@@ -59,7 +62,6 @@
     display: flex;
   }
 
-
   &--text {
     color: white;
     font-weight: bold;
@@ -76,12 +78,11 @@
 
     background-color: $color-primary-dark;
 
-    &>* {
+    & > * {
       color: white;
       font-size: 3rem;
       padding: 0.2rem;
       margin: 0 5px;
-
     }
 
     @media (max-width: 1200px) {
@@ -93,12 +94,11 @@
     }
 
     @media (max-width: 768px) {
-      &>* {
+      & > * {
         font-size: 2.4rem;
       }
     }
   }
-
 
   &--link {
     color: white;
