--- a/sass/_header-nav.scss
+++ b/sass/_header-nav.scss
@@ -2,15 +2,18 @@
   margin-top: 5rem;
 
   &__navigation {
-    display: flex;
+    display: none;
     justify-content: center;
     margin-top: 5rem;
 
-    // @media (min-width: 501px) {
-    //   display: none;
-    // }
+    @media (min-width: 768px) {
+      display: flex;
+      margin-top: -5rem;
+      margin-bottom: 1rem;
+    }
 
-    @media (max-width: 768px) {
+    @media (min-width: 1200px) {
+      display: flex;
       margin-top: -5rem;
       margin-bottom: 1rem;
     }
