--- a/sass/_posts.scss
+++ b/sass/_posts.scss
@@ -7,7 +7,7 @@
   text-align: center;
   line-height: 1.1;
 
-  @media (max-width:992px) {
+  @media (max-width: 992px) {
     font-size: 3.2rem;
   }
 }
@@ -22,6 +22,10 @@
   @media (max-width: 992px) {
     justify-content: flex-start;
   }
+
+  @media (max-width: 534px) {
+    display: flex;
+  }
 }
 
 .post {
@@ -34,6 +38,12 @@
 
   @media (max-width: 992px) {
     flex: 0 1 50%;
+    margin-bottom: 2rem;
+  }
+
+  @media (max-width: 534px) {
+    flex: 1 0 50%;
+    margin-bottom: 2rem;
   }
 
   &__image {
